--- a/style.css
+++ b/style.css
@@ -17,3 +17,9 @@ p {font-size: 16px;}
   margin-left: 15px;
   margin-right: 15px;
 }
+
+.myDiv{
+  border: 5px outset darkslategray;
+  background-color: Sienna;    
+  text-align:center;
+}
