--- a/style.css
+++ b/style.css
@@ -23,3 +23,7 @@ p {font-size: 16px;}
   background-color: Sienna;    
   text-align:center;
 }
+.vidDiv{
+  text-align: center;
+  object-fit: center;
+}
