--- a/style.css
+++ b/style.css
@@ -22,9 +22,14 @@ p {font-size: 16px;}
   border: 5px outset darkslategray;
   background-color: Sienna;    
   text-align:center;
+  color:snow;
 }
 .vidDiv{
   text-align: center;
   object-fit: center;
   background-color: goldenrod;
+}
+.fullcenter{
+  text-align: center;
+  object-fit: center;
 }
